--- a/pages/app.hbs
+++ b/pages/app.hbs
@@ -1,8 +1,8 @@
 import React, {Component, Fragment} from 'react';
-{{# ifAddMobx}}
+{{#if ifAddMobx}}
 import {observer} from 'mobx-react';
 {{/if}}
-{{# ifAddRouter}}
+{{#if ifAddRouter}}
 import {Route, Switch, HashRouter as Router, Redirect} from 'react-router-dom';
 import routes from 'routes/route';
 import Header from 'components/header/header';
@@ -10,7 +10,7 @@ import Header from 'components/header/header';
 
 import './app.less';
 
-{{# ifAddMobx}}
+{{#if ifAddMobx}}
 @observer
 {{/if}}
 class App extends Component {
@@ -26,7 +26,7 @@ class App extends Component {
     render() {
         return (
             <Fragment>
-                {{# ifAddRouter}}
+                {{#if ifAddRouter}}
                 <Header></Header>
                 <div className="container">
                     <Router>
